# omiBioKit

./: .coverage  .gitignore  LICENSE  MODULES.md  README.md  development.md  generate_directory.py  log.md  pyproject.toml  requirements.txt  res.out
.github/workflows/: cl.yml  main.yml  python-publish.yml
bioKit/: __init__.py  gcContent.py  geneAnalysis.py  genomeAnalysis.py  orfFinder.py
bioKit/analysis/: __init__.py  gcContent.py  orfFinder.py
bioKit/bioObjects/: __init__.py  gene.py  genome.py
bioKit/io/: __init__.py  fastaReader.py  write_fasta.py
bioKit/sequence/: __init__.py  complement.py  geneAnalysis.py  (+5 more)
constructing/: cli_analysis_demo.sh  count_nt.py  encode_test.py  test.py
data/: gc.fa  orf.fa
dev/: CHANGELOG.md  TODO.md  check.py  generate_directory.py  time.out
examples/: find_motifs_demo.py  find_orfs_demo.py  gc_analysis_demo.py  test.py
omibio/: __init__.py  cli.py  config.py  config.toml  directory.py  generate_directory.py
omibio.egg-info/: PKG-INFO  SOURCES.txt
output/: orf_example_output.txt
src/: __init__.py  fastaReader.py  gcContent.py  gcContentr.py  gcCounter.py  geneAnalysis.py  genomeAnalysis.py  orfFinder.py  sequenceAnalysis.py  transcribe.py  translate.py
tests/: __init__.py  test_comment.md  test_consensus.py  test_find_motif.py  test_find_orfs.py  test_gc_content.py  test_kmer.py  test_palindrome.py  test_polypeptide.py  test_protein_mass.py  test_random_seq.py  test_read_fasta.py  test_seqinterval.py  test_sequence.py  test_shuffle_seq.py  test_sliding_gc.py  test_truncate_repr.py  test_write_fasta.py
(+191 files in other folders)
