[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omibio"
version = "0.1.2.post1"
description = "A lightweight and easy-to-use python bioinformatics toolkit."
readme = "README.md"
authors = [{name = "OceanMist"}]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["bioinformatics", "fasta", "orf", "sequence"]
dependencies = [
    "click",
    "numpy",
    "pandas",
]

[project.optional-dependencies]
plot = ["matplotlib", "seaborn"]
dev = ["pytest>=7", "black>=23", "mypy"]
all = ["omibio[plot,dev]"] 

[project.scripts]
omibio = "omibio.cli:cli"